properties and command support